More tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,34 @@
-set-option -sg escape-time 10
-set-option -g focus-events on
-set-option -a terminal-features 'xterm-256color:RGB'
+# Change prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
+# Mouse
+set -g mouse on
+
+# Appearance
+set -g status-style bg=#3b4261,fg=#82aaff
+
+set -g pane-border-style fg=#828bb8
+set -g pane-active-border-style fg=#c8d3f5
+
+# Recommended Neovim settings
+set -sg escape-time 10
+set -g focus-events on
+set -a terminal-features 'xterm-256color:RGB'
+set -g default-terminal 'screen-256color'
+
+# Reload conf
+bind r source-file ~/.tmux.conf
+
+# Count windows from 1
+set -g base-index 1
+
+# Panes
+bind | split-window -h
+bind - split-window -v
+
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
