Add more navigation commands for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,16 @@ set -g base-index 1
 bind | split-window -h
 bind - split-window -v
 
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind -r C-k select-pane -U
+bind -r C-j select-pane -D
+bind -r C-h select-pane -L
+bind -r C-l select-pane -R
+
+# Windows
+bind -r h previous-window
+bind -r l next-window
+
+# Sessions
+bind -r k switch-client -p
+bind -r j switch-client -n
+
