--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,8 @@ bind r source-file ~/.tmux.conf
 set -g base-index 1
 
 # Panes
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 bind -r C-k select-pane -U
 bind -r C-j select-pane -D
