Add more tmux window management

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,12 @@ bind -r C-h select-pane -L
 bind -r C-l select-pane -R
 
 # Windows
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 bind -r h previous-window
 bind -r l next-window
+bind C-Space last-window
 
 # Sessions
 bind -r k switch-client -p
