Faster way to switch tmux pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,13 +33,15 @@ bind -r C-j select-pane -D
 bind -r C-h select-pane -L
 bind -r C-l select-pane -R
 
+bind C-Space last-pane
+
 # Windows
 unbind c
 bind c new-window -c "#{pane_current_path}"
 
 bind -r h previous-window
 bind -r l next-window
-bind C-Space last-window
+bind Space last-window
 
 # Sessions
 bind -r k switch-client -p
